--- a/app/mikane/src/app/pages/expenditures/expenditures.component.scss
+++ b/app/mikane/src/app/pages/expenditures/expenditures.component.scss
@@ -6,7 +6,7 @@
   position: fixed;
   bottom: 80px;
   right: 20px;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .expense-name {
